fix layout issues in item detail

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -287,7 +287,7 @@ input[type='radio']:checked:before {
 
 }
 
-.item-info-description {
+.panel-white .item-info-description {
   position: relative;
   padding-left: 18px;
   padding-right: 18px;
